Adding getLeagueStageGames title and functions. adding examples to API titles.
